--- a/spotify_and_youtube_tests.ipynb
+++ b/spotify_and_youtube_tests.ipynb
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "ebb6109c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_playlist_tracks(sp: spotipy.Spotify, playlist_url: str) -> pd.DataFrame:\n",
-    "    \"\"\"\"\"\"\n",
+    "    \"\"\"Extract tracks from a url (only read permissions needed)\"\"\"\n",
     "    playlist_name = sp.playlist(playlist_id = playlist_url, fields = \"name\")[\"name\"]\n",
     "\n",
     "    # Create a list accounting for the offset\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "b34c1027",
    "metadata": {},
    "outputs": [
@@ -161,81 +161,74 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>spotify</td>\n",
-       "      <td>Pa la dusha (cantables)</td>\n",
-       "      <td>https://open.spotify.com/playlist/03fpAdWRT8Fu...</td>\n",
+       "      <td>prueba_spotipy</td>\n",
+       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
        "      <td>Amanecer</td>\n",
        "      <td>5HHvMVnt9Pg7RLanL0IaT3</td>\n",
        "      <td>Saurom</td>\n",
        "      <td>Música</td>\n",
        "      <td>341720</td>\n",
-       "      <td>2024-04-08T19:34:46Z</td>\n",
+       "      <td>2025-08-26T08:53:34Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>spotify</td>\n",
-       "      <td>Pa la dusha (cantables)</td>\n",
-       "      <td>https://open.spotify.com/playlist/03fpAdWRT8Fu...</td>\n",
+       "      <td>prueba_spotipy</td>\n",
+       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
        "      <td>Alumina</td>\n",
        "      <td>34qsiP8jDp3GNIqACvmNlQ</td>\n",
        "      <td>NIGHTMARE</td>\n",
        "      <td>the WORLD Ruler</td>\n",
        "      <td>305840</td>\n",
-       "      <td>2024-04-08T19:35:56Z</td>\n",
+       "      <td>2025-08-26T08:53:34Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>spotify</td>\n",
-       "      <td>Pa la dusha (cantables)</td>\n",
-       "      <td>https://open.spotify.com/playlist/03fpAdWRT8Fu...</td>\n",
+       "      <td>prueba_spotipy</td>\n",
+       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
        "      <td>Uragirimonono Requiem - Giorno Ver.</td>\n",
        "      <td>3q7hI6kxCAbj0yDTR4asML</td>\n",
        "      <td>Yugo Kanno</td>\n",
        "      <td>JOJO'S BIZARRE ADVENTURE -Golden Wind O.S.T vo...</td>\n",
        "      <td>219187</td>\n",
-       "      <td>2024-04-08T19:36:08Z</td>\n",
+       "      <td>2025-08-26T08:53:34Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>spotify</td>\n",
-       "      <td>Pa la dusha (cantables)</td>\n",
-       "      <td>https://open.spotify.com/playlist/03fpAdWRT8Fu...</td>\n",
+       "      <td>prueba_spotipy</td>\n",
+       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
        "      <td>Fighting Gold</td>\n",
        "      <td>5ycVJufpq4ad1mqA5JfNQS</td>\n",
        "      <td>Coda</td>\n",
        "      <td>Fighting Gold</td>\n",
        "      <td>253185</td>\n",
-       "      <td>2024-04-08T19:36:15Z</td>\n",
+       "      <td>2025-08-26T08:53:34Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>spotify</td>\n",
-       "      <td>Pa la dusha (cantables)</td>\n",
-       "      <td>https://open.spotify.com/playlist/03fpAdWRT8Fu...</td>\n",
+       "      <td>prueba_spotipy</td>\n",
+       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
        "      <td>Hope of Morning</td>\n",
        "      <td>6REggZ9bXP4wLfnQPgE69z</td>\n",
        "      <td>Icon For Hire</td>\n",
        "      <td>Icon for Hire</td>\n",
        "      <td>229604</td>\n",
-       "      <td>2024-04-08T19:36:25Z</td>\n",
+       "      <td>2025-08-26T08:53:34Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    origin            playlist_name  \\\n",
-       "0  spotify  Pa la dusha (cantables)   \n",
-       "1  spotify  Pa la dusha (cantables)   \n",
-       "2  spotify  Pa la dusha (cantables)   \n",
-       "3  spotify  Pa la dusha (cantables)   \n",
-       "4  spotify  Pa la dusha (cantables)   \n",
-       "\n",
-       "                                        playlist_url  \\\n",
-       "0  https://open.spotify.com/playlist/03fpAdWRT8Fu...   \n",
-       "1  https://open.spotify.com/playlist/03fpAdWRT8Fu...   \n",
-       "2  https://open.spotify.com/playlist/03fpAdWRT8Fu...   \n",
-       "3  https://open.spotify.com/playlist/03fpAdWRT8Fu...   \n",
-       "4  https://open.spotify.com/playlist/03fpAdWRT8Fu...   \n",
+       "    origin   playlist_name                                       playlist_url  \\\n",
+       "0  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
+       "1  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
+       "2  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
+       "3  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
+       "4  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
        "\n",
        "                            track_name                track_id         artist  \\\n",
        "0                             Amanecer  5HHvMVnt9Pg7RLanL0IaT3         Saurom   \n",
@@ -252,20 +245,20 @@
        "4                                      Icon for Hire       229604   \n",
        "\n",
        "               added_at  \n",
-       "0  2024-04-08T19:34:46Z  \n",
-       "1  2024-04-08T19:35:56Z  \n",
-       "2  2024-04-08T19:36:08Z  \n",
-       "3  2024-04-08T19:36:15Z  \n",
-       "4  2024-04-08T19:36:25Z  "
+       "0  2025-08-26T08:53:34Z  \n",
+       "1  2025-08-26T08:53:34Z  \n",
+       "2  2025-08-26T08:53:34Z  \n",
+       "3  2025-08-26T08:53:34Z  \n",
+       "4  2025-08-26T08:53:34Z  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tracks = get_playlist_tracks(sp, r\"https://open.spotify.com/playlist/03fpAdWRT8FuAXpJ4Zgmqr\")\n",
+    "tracks = get_playlist_tracks(sp, r\"https://open.spotify.com/playlist/0mSjZmnhxJLUp7wzHTtibc\")\n",
     "today = datetime.now().strftime(\"%Y-%m-%d_%H%M%S\")\n",
     "user = sp.current_user()[\"id\"]\n",
     "\n",
