Spotify backup corrections and upload from csv with origin check

--- a/spotify_and_youtube_tests.ipynb
+++ b/spotify_and_youtube_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d2b290c3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "38c367ac",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8c215476",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2abab3b9",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ebb6109c",
    "metadata": {},
    "outputs": [],
@@ -121,140 +121,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 25,
    "id": "b34c1027",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>origin</th>\n",
-       "      <th>playlist_name</th>\n",
-       "      <th>playlist_url</th>\n",
-       "      <th>track_name</th>\n",
-       "      <th>track_id</th>\n",
-       "      <th>artist</th>\n",
-       "      <th>album</th>\n",
-       "      <th>duration_ms</th>\n",
-       "      <th>added_at</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>spotify</td>\n",
-       "      <td>prueba_spotipy</td>\n",
-       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
-       "      <td>Amanecer</td>\n",
-       "      <td>5HHvMVnt9Pg7RLanL0IaT3</td>\n",
-       "      <td>Saurom</td>\n",
-       "      <td>Música</td>\n",
-       "      <td>341720</td>\n",
-       "      <td>2025-08-26T08:53:34Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>spotify</td>\n",
-       "      <td>prueba_spotipy</td>\n",
-       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
-       "      <td>Alumina</td>\n",
-       "      <td>34qsiP8jDp3GNIqACvmNlQ</td>\n",
-       "      <td>NIGHTMARE</td>\n",
-       "      <td>the WORLD Ruler</td>\n",
-       "      <td>305840</td>\n",
-       "      <td>2025-08-26T08:53:34Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>spotify</td>\n",
-       "      <td>prueba_spotipy</td>\n",
-       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
-       "      <td>Uragirimonono Requiem - Giorno Ver.</td>\n",
-       "      <td>3q7hI6kxCAbj0yDTR4asML</td>\n",
-       "      <td>Yugo Kanno</td>\n",
-       "      <td>JOJO'S BIZARRE ADVENTURE -Golden Wind O.S.T vo...</td>\n",
-       "      <td>219187</td>\n",
-       "      <td>2025-08-26T08:53:34Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>spotify</td>\n",
-       "      <td>prueba_spotipy</td>\n",
-       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
-       "      <td>Fighting Gold</td>\n",
-       "      <td>5ycVJufpq4ad1mqA5JfNQS</td>\n",
-       "      <td>Coda</td>\n",
-       "      <td>Fighting Gold</td>\n",
-       "      <td>253185</td>\n",
-       "      <td>2025-08-26T08:53:34Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>spotify</td>\n",
-       "      <td>prueba_spotipy</td>\n",
-       "      <td>https://open.spotify.com/playlist/0mSjZmnhxJLU...</td>\n",
-       "      <td>Hope of Morning</td>\n",
-       "      <td>6REggZ9bXP4wLfnQPgE69z</td>\n",
-       "      <td>Icon For Hire</td>\n",
-       "      <td>Icon for Hire</td>\n",
-       "      <td>229604</td>\n",
-       "      <td>2025-08-26T08:53:34Z</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    origin   playlist_name                                       playlist_url  \\\n",
-       "0  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
-       "1  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
-       "2  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
-       "3  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
-       "4  spotify  prueba_spotipy  https://open.spotify.com/playlist/0mSjZmnhxJLU...   \n",
-       "\n",
-       "                            track_name                track_id         artist  \\\n",
-       "0                             Amanecer  5HHvMVnt9Pg7RLanL0IaT3         Saurom   \n",
-       "1                              Alumina  34qsiP8jDp3GNIqACvmNlQ      NIGHTMARE   \n",
-       "2  Uragirimonono Requiem - Giorno Ver.  3q7hI6kxCAbj0yDTR4asML     Yugo Kanno   \n",
-       "3                        Fighting Gold  5ycVJufpq4ad1mqA5JfNQS           Coda   \n",
-       "4                      Hope of Morning  6REggZ9bXP4wLfnQPgE69z  Icon For Hire   \n",
-       "\n",
-       "                                               album  duration_ms  \\\n",
-       "0                                             Música       341720   \n",
-       "1                                    the WORLD Ruler       305840   \n",
-       "2  JOJO'S BIZARRE ADVENTURE -Golden Wind O.S.T vo...       219187   \n",
-       "3                                      Fighting Gold       253185   \n",
-       "4                                      Icon for Hire       229604   \n",
-       "\n",
-       "               added_at  \n",
-       "0  2025-08-26T08:53:34Z  \n",
-       "1  2025-08-26T08:53:34Z  \n",
-       "2  2025-08-26T08:53:34Z  \n",
-       "3  2025-08-26T08:53:34Z  \n",
-       "4  2025-08-26T08:53:34Z  "
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HTTP Error for GET to https://api.spotify.com/v1/me/ with Params: {} returned 401 due to Valid user authentication required\n"
+     ]
+    },
+    {
+     "ename": "SpotifyException",
+     "evalue": "http status: 401, code: -1 - https://api.spotify.com/v1/me/:\n Valid user authentication required, reason: None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mHTTPError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\domin\\anaconda3\\envs\\playlists\\Lib\\site-packages\\spotipy\\client.py:274\u001b[39m, in \u001b[36mSpotify._internal_call\u001b[39m\u001b[34m(self, method, url, payload, params)\u001b[39m\n\u001b[32m    269\u001b[39m response = \u001b[38;5;28mself\u001b[39m._session.request(\n\u001b[32m    270\u001b[39m     method, url, headers=headers, proxies=\u001b[38;5;28mself\u001b[39m.proxies,\n\u001b[32m    271\u001b[39m     timeout=\u001b[38;5;28mself\u001b[39m.requests_timeout, **args\n\u001b[32m    272\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m274\u001b[39m response.raise_for_status()\n\u001b[32m    275\u001b[39m results = response.json()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\domin\\anaconda3\\envs\\playlists\\Lib\\site-packages\\requests\\models.py:1026\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1025\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response=\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[31mHTTPError\u001b[39m: 401 Client Error: Unauthorized for url: https://api.spotify.com/v1/me/",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mSpotifyException\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m tracks = get_playlist_tracks(sp, \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://open.spotify.com/playlist/0mSjZmnhxJLUp7wzHTtibc\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      2\u001b[39m today = datetime.now().strftime(\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY-\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33m_\u001b[39m\u001b[33m%\u001b[39m\u001b[33mH\u001b[39m\u001b[33m%\u001b[39m\u001b[33mM\u001b[39m\u001b[33m%\u001b[39m\u001b[33mS\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m user = sp.current_user()[\u001b[33m\"\u001b[39m\u001b[33mid\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      5\u001b[39m output_dir = Path(\u001b[33m\"\u001b[39m\u001b[33mexports\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m output_dir.mkdir(parents = \u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok = \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\domin\\anaconda3\\envs\\playlists\\Lib\\site-packages\\spotipy\\client.py:1260\u001b[39m, in \u001b[36mSpotify.current_user\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1256\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcurrent_user\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1257\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\" Get detailed profile information about the current user.\u001b[39;00m\n\u001b[32m   1258\u001b[39m \u001b[33;03m        An alias for the 'me' method.\u001b[39;00m\n\u001b[32m   1259\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1260\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.me()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\domin\\anaconda3\\envs\\playlists\\Lib\\site-packages\\spotipy\\client.py:1254\u001b[39m, in \u001b[36mSpotify.me\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1250\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mme\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1251\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\" Get detailed profile information about the current user.\u001b[39;00m\n\u001b[32m   1252\u001b[39m \u001b[33;03m        An alias for the 'current_user' method.\u001b[39;00m\n\u001b[32m   1253\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1254\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._get(\u001b[33m\"\u001b[39m\u001b[33mme/\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\domin\\anaconda3\\envs\\playlists\\Lib\\site-packages\\spotipy\\client.py:324\u001b[39m, in \u001b[36mSpotify._get\u001b[39m\u001b[34m(self, url, args, payload, **kwargs)\u001b[39m\n\u001b[32m    321\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m args:\n\u001b[32m    322\u001b[39m     kwargs.update(args)\n\u001b[32m--> \u001b[39m\u001b[32m324\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._internal_call(\u001b[33m\"\u001b[39m\u001b[33mGET\u001b[39m\u001b[33m\"\u001b[39m, url, payload, kwargs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\domin\\anaconda3\\envs\\playlists\\Lib\\site-packages\\spotipy\\client.py:294\u001b[39m, in \u001b[36mSpotify._internal_call\u001b[39m\u001b[34m(self, method, url, payload, params)\u001b[39m\n\u001b[32m    289\u001b[39m         reason = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    291\u001b[39m     logger.error(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mHTTP Error for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmethod\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m with Params: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    292\u001b[39m                  \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00margs.get(\u001b[33m'\u001b[39m\u001b[33mparams\u001b[39m\u001b[33m'\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m returned \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m due to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmsg\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m294\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m SpotifyException(\n\u001b[32m    295\u001b[39m         response.status_code,\n\u001b[32m    296\u001b[39m         -\u001b[32m1\u001b[39m,\n\u001b[32m    297\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse.url\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmsg\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m,\n\u001b[32m    298\u001b[39m         reason=reason,\n\u001b[32m    299\u001b[39m         headers=response.headers,\n\u001b[32m    300\u001b[39m     )\n\u001b[32m    301\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m requests.exceptions.RetryError \u001b[38;5;28;01mas\u001b[39;00m retry_error:\n\u001b[32m    302\u001b[39m     request = retry_error.request\n",
+      "\u001b[31mSpotifyException\u001b[39m: http status: 401, code: -1 - https://api.spotify.com/v1/me/:\n Valid user authentication required, reason: None"
+     ]
     }
    ],
    "source": [
@@ -279,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3570e1ed",
    "metadata": {},
    "outputs": [],
@@ -287,7 +183,7 @@
     "# Conectarse con permiso de escritura de playlists\n",
     "sp = spotipy.Spotify(\n",
     "    auth_manager = spotipy.SpotifyOAuth(\n",
-    "        scope = \"playlist-modify-private playlist-modify-public\",\n",
+    "        scope = \"playlist-modify-private playlist-modify-public playlist-read-private playlist-read-collaborative user-library-read\",\n",
     "        cache_path=\".cache-playlists\",\n",
     "        show_dialog=True\n",
     "    )\n",
@@ -351,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "daad33fd",
    "metadata": {},
    "outputs": [
@@ -374,6 +270,27 @@
     "    playlist_id = newPlaylist[\"id\"],\n",
     "    tracks = tracks_id\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1a55a33e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['album', 'artists', 'available_markets', 'disc_number', 'duration_ms', 'explicit', 'external_ids', 'external_urls', 'href', 'id', 'is_local', 'is_playable', 'name', 'popularity', 'preview_url', 'track_number', 'type', 'uri'])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.current_user_saved_tracks()[\"items\"][0][\"track\"].keys()"
    ]
   },
   {
