Liked songs backup and inconsistent private playlist creation (tried forcing it, but there is not much else to do)

--- a/spotify_and_youtube_tests.ipynb
+++ b/spotify_and_youtube_tests.ipynb
@@ -295,11 +295,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "1d6752ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_credentials(scope: str) -> spotipy.Spotify:\n",
+    "    # Get credentials\n",
+    "    # TODO: from .env to actual writing your info. Maybe looking for a .env, if not found, ask for the data.\n",
+    "    envPath = \".env\"\n",
+    "\n",
+    "    Path(envPath).exists()\n",
+    "    if not dotenv.load_dotenv(envPath):\n",
+    "        raise RuntimeError(f\"Environment Variables not found in {envPath}\")\n",
+    "\n",
+    "    # Connect with read permissions\n",
+    "    sp = spotipy.Spotify(\n",
+    "        auth_manager = spotipy.SpotifyOAuth(\n",
+    "            scope = scope,\n",
+    "            cache_path=\".cache-playlists\",\n",
+    "            show_dialog=True\n",
+    "        )\n",
+    "    )\n",
+    "    return sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7d3d9340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = spotipy.Spotify(\n",
+    "        auth_manager = spotipy.SpotifyOAuth(\n",
+    "            cache_path=\".cache-playlists\",\n",
+    "            show_dialog=True\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "024760cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "playlist-modify-private playlist-modify-public playlist-read-private playlist-read-collaborative user-library-read\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sp.auth_manager.get_cached_token()[\"scope\"])  # must include playlist-modify-private"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "773616a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "public? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "me = sp.current_user()\n",
+    "pl = sp.user_playlist_create(\n",
+    "    user=me[\"id\"],\n",
+    "    name=\"aa\",\n",
+    "    public=False,\n",
+    "    description=f\"Generated from CSV Backup. Upload: {datetime.now().strftime('%d-%m-%Y, %H:%M:%S')}\"\n",
+    ")\n",
+    "pl_full = sp.playlist(pl[\"id\"], fields=\"id,name,public,owner(id)\")\n",
+    "print(\"public?\", pl_full[\"public\"])  # expect False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "723e4435",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.user_playlist_change_details(me[\"id\"], pl[\"id\"], public=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "61e3a4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "owner: domnes42 public: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "me = sp.current_user()\n",
+    "pl = sp.user_playlist_create(\n",
+    "    me[\"id\"],\n",
+    "    \"playlist_name\",\n",
+    "    public=False,\n",
+    "    description=\"…\"\n",
+    ")\n",
+    "sp.user_playlist_change_details(me[\"id\"], pl[\"id\"], public=False)\n",
+    "\n",
+    "pl_full = sp.playlist(pl[\"id\"], fields=\"id,name,public,owner(id)\")\n",
+    "print(\"owner:\", pl_full[\"owner\"][\"id\"], \"public:\", pl_full[\"public\"])\n"
+   ]
   }
  ],
  "metadata": {
